// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OperationGenerator > [DELETE] /pet/{petId} with unknownType \`any\` 1`] = `
"export type DeletePetPetidMutationResponse = any;

 export type DeletePetPetidMutation = {
    Response: DeletePetPetidMutationResponse;
};
"
`;

exports[`OperationGenerator > [DELETE] /pet/{petId} with unknownType \`unknown\` 1`] = `
"export type DeletePetPetidMutationResponse = unknown;

 export type DeletePetPetidMutation = {
    Response: DeletePetPetidMutationResponse;
};
"
`;

exports[`OperationGenerator > [GET] /pets with optionalType \`questionToken\` 1`] = `
"import type { Pets } from "./Pets";
import type { Error } from "./Error";

 export type ListPetsQueryParams = {
    /**
     * @description How many items to return at one time (max 100)
     * @type string | undefined
    */
    limit?: string;
};

 /**
 * @description A paged array of pets
*/
export type ListPetsQueryResponse = Pets;

 /**
 * @description A paged array of pets
*/
export type ListPets200 = Pets;

 /**
 * @description unexpected error
*/
export type ListPetsError = Error;

 export type ListPetsQuery = {
    Response: ListPetsQueryResponse;
    QueryParams: ListPetsQueryParams;
};
"
`;

exports[`OperationGenerator > [GET] /pets with optionalType \`questionToken\` 2`] = `
"import type { Pet } from "./Pet";
import type { Error } from "./Error";

 export type ShowPetByIdPathParams = {
    /**
     * @description The id of the pet to retrieve
     * @type string
    */
    petId: string;
    /**
     * @description The id of the pet to retrieve
     * @type string
    */
    testId: string;
};

 /**
 * @description Expected response to a valid request
*/
export type ShowPetByIdQueryResponse = Pet;

 /**
 * @description Expected response to a valid request
*/
export type ShowPetById200 = Pet;

 /**
 * @description unexpected error
*/
export type ShowPetByIdError = Error;

 export type ShowPetByIdQuery = {
    Response: ShowPetByIdQueryResponse;
    PathParams: ShowPetByIdPathParams;
};
"
`;

exports[`OperationGenerator > [POST] /pets 201 1`] = `
"import type { Error } from "./Error";

 /**
 * @description Null response
*/
export type CreatePetsMutationResponse = (Error & Error);

 export type CreatePetsMutationRequest = {
    /**
     * @type string
    */
    name: string;
    /**
     * @type string
    */
    tag: string;
};

 /**
 * @description Null response
*/
export type CreatePets201 = (Error & Error);

 /**
 * @description unexpected error
*/
export type CreatePetsError = Error;

 export type CreatePetsMutation = {
    Response: CreatePetsMutationResponse;
    Request: CreatePetsMutationRequest;
};
"
`;
